--- a/comprehensive-member/comprehensive-member-provide/src/main/resources/application.yml
+++ b/comprehensive-member/comprehensive-member-provide/src/main/resources/application.yml
@@ -1,12 +1,8 @@
 server:
   port: 22512
-nacos:
-  config:
-    server-addr: 49.232.89.51:8848
-    namespace: 5792f7b5-a856-4457-8c62-a46b2d7fb489
 dubbo:
   registry:
-    address: nacos://49.232.89.51:8848
+    address: nacos://49.232.89.51:8848?namespace=5792f7b5-a856-4457-8c62-a46b2d7fb489
   application:
     name: member-provider
   protocol:
@@ -16,5 +12,8 @@ dubbo:
     base-packages: com.comprehensiveplatform.member.service
 spring:
   main:
-    # ??Bean??????
     allow-bean-definition-overriding: true
+nacos:
+  config:
+    server-addr: 49.232.89.51:8848
+    namespace: 5792f7b5-a856-4457-8c62-a46b2d7fb489
